# ppltr

./: LICENSE  Makefile  README.md  dune  dune-project  main.ml  ppltr.opam  ppltr.sh
eval/: 01-contracts.csv  02-ebso-blocks.csv  03-windowed-blocks.csv  04-optimizations.csv  05-sorg-results.csv  06-rules.csv  08-reduced-rules.csv  09-reduced-ebso-blocks.csv  10-windowed-reduced-blocks.csv  11-ebso-results.csv  12-optimizations.csv  13-sorg-results.csv  14-rules.csv  15-combined-sorg-results.csv  16-rules.csv  17-reduced-rules.csv  stats.md  stats.txt
eval/07-stats/: duplicate_rules.csv  rhs_finds_new_rules.csv  summary.md  timeouts.csv
eval/14-stats/: duplicate_rules.csv  rhs_finds_new_rules.csv  summary.md  timeouts.csv
eval/16-stats/: summary.md
eval/18-encs/: equiv_enc_0.smt2  equiv_enc_1.smt2  equiv_enc_10.smt2  equiv_enc_100.smt2  equiv_enc_101.smt2  equiv_enc_102.smt2  equiv_enc_103.smt2  equiv_enc_104.smt2  equiv_enc_105.smt2  equiv_enc_106.smt2  equiv_enc_107.smt2  equiv_enc_108.smt2  equiv_enc_109.smt2  equiv_enc_11.smt2  equiv_enc_110.smt2  equiv_enc_111.smt2  equiv_enc_112.smt2  equiv_enc_113.smt2  equiv_enc_114.smt2  equiv_enc_115.smt2  equiv_enc_116.smt2  equiv_enc_117.smt2  equiv_enc_118.smt2  equiv_enc_119.smt2  equiv_enc_12.smt2  equiv_enc_120.smt2  equiv_enc_121.smt2  equiv_enc_122.smt2  equiv_enc_123.smt2  equiv_enc_124.smt2  equiv_enc_125.smt2  equiv_enc_126.smt2  equiv_enc_127.smt2  equiv_enc_128.smt2  equiv_enc_129.smt2  equiv_enc_13.smt2  equiv_enc_130.smt2  equiv_enc_131.smt2  equiv_enc_132.smt2  equiv_enc_133.smt2  (+953 more)
eval/stats/: rhs_finds_new_rules.csv  timeouts.csv
eval/stats/16-stats/: duplicate_rules.csv
examples/: 01-contracts.csv  05-sorg-results.csv  06-rules.csv  blocks.csv  optz.csv  sample-list
lib/: blk_generator.ml  dsc.ml  dsc_proofs.ml  dune  eq_enc_generator.ml  optz_generator.ml  rewriter.ml  rule_generator.ml
test/: dune  test_blk_generator.ml  test_rewriter.ml  test_rule_generator.ml
