opam-version: "2.0"
name: "ppltr"
version: "1.0"
synopsis: "A PoPuLaToR for a PeePhoLeopTimizeR of EVM bytecode"
maintainer: [ "mail@maria-a-schett.net" "mail@jnagele.net" ]
authors: [ "mail@maria-a-schett.net" "mail@jnagele.net" ]
license: "Apache-2.0"
homepage: "https://github.com/mariaschett/ppltr"
dev-repo: "git+https://github.com:mariaschett/ppltr.git"
bug-reports: "https://github.com/mariaschett/ppltr/issues"
depends: [
  "ocaml"
  "dune"
  "core"
  "ebso" {= "2.1"}
  "sorg" {= "1.1"}
  "csv"
  "ounit" {with-test}
  "ppx_sexp_conv"
  "ppx_deriving"
]
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [make "test"]
