(executables
 (names test_blk_generator test_rewriter test_rule_generator)
 (libraries ppltr oUnit)
 (preprocess (pps ppx_deriving.std))
 (link_flags -cc g++)
)

(alias
 (name runtest)
 (deps (:x test_blk_generator.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_rewriter.exe))
 (action (run %{x}))
)

(alias
 (name runtest)
 (deps (:x test_rule_generator.exe))
 (action (run %{x}))
)
